--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,13 @@
 name: Tanya Marwah
 email: tmarwah@andrew.cmu.edu
 description: > # this means to ignore newlines until "url:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
   Tanya Marwah is a Masters in Robotics student at [Robotics Institute](https://ri.cmu.edu), [CMU](https://cmu.edu). 
 footer_text: >
   Tanya Marwah 
   # Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
 url:  # the base hostname & protocol for your site
-baseurl: /tm157 # the subpath of your site, e.g. /blog/
+baseurl: / # the subpath of your site, e.g. /blog/
 last_updated: # leave blank if you don't want to display last updated
 
 # -----------------------------------------------------------------------------
@@ -30,8 +29,8 @@ google_analytics: UA-XXXXXXXXX # out your google-analytics code
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
-blog_name: al-folio
-blog_description: a simple whitespace theme for academics
+#blog_name: al-folio
+#blog_description: a simple whitespace theme for academics
 
 # Pagination
 paginate: 4
