add recent works

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tanya Marwah # your name (or website title) here
-logo: "/images/tanya.jpg?raw=true" # your photo (or logo) here
+logo: "/images/Tanya.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   PhD Student at Machine Learning Department, Carnegie Mellon University.
 
