--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tanya Marwah # your name (or website title) here
-logo: "/images/Tanya.png?raw=true" # your photo (or logo) here
+logo: "/images/Tanya2.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   tmarwah [at] andrew [dot] cmu [dot] edu
 
